--- a/C4-L02.qmd
+++ b/C4-L02.qmd
@@ -44,7 +44,9 @@ We will next introduce the autoregressive process of order one, or AR(1) process
 
 $$
 y_t = \phi y_{t-1} + \varepsilon_t \qquad \varepsilon_t \overset{iid}{\sim} \mathcal{N}(0, v)
-$$
+$$ {#eq-ar1-definition}
+
+where:
 
 where $\phi$ is the AR(1) coefficient
  
@@ -64,7 +66,7 @@ For $\|\phi\| < 1$, as $k \to \infty$, this becomes:
 
 $$
 y_t = \sum_{j=0}^{\infty} \phi^j \varepsilon_{t-j}
-$$
+$$ {#eq-ar1-infinite-expansion}
 
 Interpreted as an infinite-order **Moving Average (MA(∞))** process.
 
@@ -119,7 +121,7 @@ $$
 \rho(h) = \frac{\gamma(h)}{\gamma(0)} = \phi^{\|h\|}
 $$ {#eq-ar1-autocorrelation}
 
- ### AR(1) other properties:
+### AR(1) other properties:
 
 1. for any lag $h$:
 
