--- a/C4-L11.qmd
+++ b/C4-L11.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Week 0: Feynman Notebook on Bayesian Time Series Analysis"
+title: "Week 0: Feynman Notebook on Bayesian Analysis"
 subtitle: Time Series Analysis
 description: "Notes on Bayesian Time Series Analysis"
 date: 2024-10-22
@@ -11,28 +11,31 @@ categories:
   - Feynman Notebook
 keywords: 
   - time series  
-
-
 ---
 
 
-## A Feynman Notebook - For Bayesian Time Series Analysis
+## A Feynman Notebook - For Bayesian ~~Time Series~~ Analysis
 
 ::: {.callout-important}
 
 ## TS Questions --- A Feynman Notebook
 
 Here is where I can collect questions about TS analysis that I have as I go through the course. Hopefully I will be better equipped to answer many of these  them by the end of the course.
+:::
 
-1. How is Bayesian TS analysis differ from regular TS analysis?
-   - In the NDLM we supply a Prior.
-   - We the use Bayesian updating to update the model with the data.
-   - We maintain a distributional view with estimates of the error.
-   - We also the use Bayesian updating and inference for Filtering, Smoothing.
+
+
+1. How does Bayesian TS analysis differ from regular TS analysis?
+   1. In the *NDLM* we supply **a Normal Prior**.
+   1. We use **Bayesian updating** to update the model parameters from the data.
+   1. Rather than using a point estimate, we maintain a distributional view of the parameters. We can propagate these uncertainties into our forecasting, smoothing, and filtering distributions.
 1. Fourier analysis is a powerful tool for time series analysis. How does it relate to Bayesian time series analysis?
-   - We can incorporate the outcomes to incorporate seasonal elements into an NDLM
+   1. It's easier to discuss periodicity and frequency components rather than the fourier analysis which is a technique. However, Fourier analysis lets us consider the time series in the time domain and in the frequency domain.
+   1. We see in the intro that 
+   1. in a Bayesian framework. We can incorporate prior beliefs about the frequency of events.
+   1. We can incorporate the outcomes to incorporate seasonal elements into an NDLM
 1. How and what type of prior knowledge into time series analysis?
-   - In [@west2013bayesian] they authors discuss both  is the actual prior.
+   - In [@west2013bayesian] they authors discuss both is the actual prior.
    - But they also talk about supporting interventions. E.g. when a major competitor goes out of business.The model should be able to handle this information and they make a big issues of how we need to incorporate into the next time step both new expected demand as well as an estimate of its variance which give better estimates of required production.
 1. Are there models that are unique to Bayesian time series analysis?
    - Hard to say but DLM seem to be.
@@ -173,7 +176,7 @@ Here is where I can collect questions about TS analysis that I have as I go thro
 
 <!-- This is long and should be broken up into subjects -->
 
-:::
+
 
 
 What is the relation between Dynamic linear time series models (DLTS) models and Bayesian structural time series models (BSTS) models?
