--- a/C4-L02.qmd
+++ b/C4-L02.qmd
@@ -68,12 +68,11 @@ $$
 y_t = \sum_{j=0}^{\infty} \phi^j \varepsilon_{t-j}
 $$ {#eq-ar1-infinite-expansion}
 
-Interpreted as an infinite-order **Moving Average (MA(∞))** process.
+Interpreted as an infinite-order **Moving Average** $\operatorname{MA}(\infty)$ process.
 
 ### AR(1) Mean
 
 \index{AR(1)!mean} 
-
 Since $\mathbb{E}[\varepsilon_t] = 0$,
 
 $$
@@ -277,31 +276,53 @@ lag.max=50 # max lag
 ### Plot true ACFs for both processes
 ```{r}
 #| label: fig-acfs
+#| fig-cap: "True ACF for the first AR(1) process"
 
-cov_0=sd^2/(1-phi1^2) # compute auto-covariance at h=0
-cov_h=phi1^(0:lag.max)*cov_0 # compute auto-covariance at h
-plot(0:lag.max, cov_h/cov_0, pch = 1, type = 'h', col = 'red',
-     ylab = "true ACF", xlab = "Lag",ylim=c(-1,1), main=expression(phi==0.9))
 
-cov_0=sd^2/(1-phi2^2) # compute auto-covariance at h=0
-cov_h=phi2^(0:lag.max)*cov_0 # compute auto-covariance at h
+cov_0=sd^2/(1-phi1^2) # <1>
+cov_h=phi1^(0:lag.max)*cov_0 # <2>
+plot(0:lag.max, cov_h/cov_0, pch = 1, 
+     type = 'h', col = 'red',
+     ylab = "true ACF", 
+     xlab = "Lag",
+     ylim=c(-1,1), 
+     main=expression(phi==0.9)) # <3>
+```
+1. compute auto-covariance at h=0
+2. compute auto-covariance at lag h
+3. Plot autocorrelation function (ACF) for the first process
+
+
+```{r}
+#| label: fig-acfs2
+#| fig-cap: "True ACF for the second AR(1) process"
+cov_0=sd^2/(1-phi2^2) # <4>
+cov_h=phi2^(0:lag.max)*cov_0 # <5>
 # Plot autocorrelation function (ACF)
-plot(0:lag.max, cov_h/cov_0, pch = 1, type = 'h', col = 'red',
-     ylab = "true ACF", xlab = "Lag",ylim=c(-1,1),main=expression(phi==-0.9))
+plot(0:lag.max, cov_h/cov_0, pch = 1, 
+     type = 'h', col = 'red',
+     ylab = "true ACF", 
+     xlab = "Lag",
+     ylim=c(-1,1),
+     main=expression(phi==-0.9)) # <6>
 
 ```
+4. compute auto-covariance at h=0 for the second process
+5. compute auto-covariance at lag h for the second process
+6. Plot autocorrelation function (ACF) for the second process
 
 ### plot sample ACFs for both processes
 
 ```{r}
 #| label: fig-sample-acfs
+#| fig-cap: "Sample ACF for the first AR(1) process"
 
 acf(yt1, lag.max = lag.max, type = "correlation", ylab = "sample ACF",
     lty = 1, ylim = c(-1, 1), main = " ")
 acf(yt2, lag.max = lag.max, type = "correlation", ylab = "sample ACF",
     lty = 1, ylim = c(-1, 1), main = " ")
 ## plot sample PACFs for both processes
-#
+
 pacf(yt1, lag.ma = lag.max, ylab = "sample PACF", ylim=c(-1,1),main="")
 pacf(yt2, lag.ma = lag.max, ylab = "sample PACF", ylim=c(-1,1),main="")
 ```
