--- a/C4-L03.qmd
+++ b/C4-L03.qmd
@@ -39,9 +39,14 @@ We do this by writing the equation in matrix form and then using the Moore-Penro
 
 Prado snuck the Moore-Penrose pseudoinverse in this handout, then she used it in the class and notes. I thought this isn't the first time this has come up in the specialization as we used MLE to some degree in all the courses, and in depth in the previous course on mixtures. However a cursory review did not uncover previous use of this mathematical tool. So I thought it might be useful to provide a brief overview of the Moore-Penrose pseudoinverse, its properties and how it is used in regression models.
 
-Moore-Penrose pseudoinverse is a generalization of the inverse matrix that can be applied to non-square matrices. It not covered in typical linear algebra courses and I don't recall it being included in the course I took on numerical methods which I took as an undergraduate student. But I have definitely seen it and the Cholesky decomposition in a number of text books. However we are not just talking about the algebra but its application in regression models. 
 
-I found a good reference in [@schott2016matrix ch. 5]
+Moore-Penrose pseudoinverse is a generalization of the inverse matrix that can be applied to non-square matrices. 
+
+- It is not covered in typical linear algebra courses. It might come up in numerical methods courses or a second linear algebra course. But unless they cover application in regression models, it is quite likely that they skip an important point, that [the Moore-Penrose pseudoinverse is used to obtain the maximum likelihood estimator for the regression coefficients in linear regression models.]{.mark}
+
+I found a couple of reference in [@schott2016matrix ch. 5] but they it didn't cover they MLE aspect of the pseudoinverse.
+
+I cover some of this material in an @sec-moore-penrose to the course notes, however I 
 
 
 
