--- a/C4-L03.qmd
+++ b/C4-L03.qmd
@@ -30,8 +30,7 @@ keywords:
 ## Maximum likelihood and Bayesian inference in regression  📖
 
 This section is based on the handout provided in the course materials. 
-The gist of this handout is that if we can write the regression as the equation of a straight line, we should be able to make use of basic algebra to invert the equation and obtain an expression for the regression coefficients. 
-We do this by writing the equation in matrix form and then using the Moore-Penrose pseudoinverse to obtain the maximum likelihood estimator for the regression coefficients.
+The gist of this handout is that if we can write the regression as the equation of a straight line, we should be able to make use of basic algebra to invert the equation and obtain an expression for the regression coefficients. We do this by writing the equation in matrix form and then using the Moore-Penrose pseudoinverse to obtain the maximum likelihood estimator for the regression coefficients.
 
 
 ::: {.callout-caution}
@@ -46,13 +45,12 @@ Moore-Penrose pseudoinverse is a generalization of the inverse matrix that can b
 
 I found a couple of reference in [@schott2016matrix ch. 5] but they it didn't cover they MLE aspect of the pseudoinverse.
 
-I cover some of this material in an @sec-moore-penrose to the course notes, however I 
+I cover some of this material in an @sec-moore-penrose to the course notes, however I am still missing a good source for @eq-mle-estimator-beta. 
 
-
+<!-- TODO: Find a good reference for the MLE estimator for beta in the context of the Moore-Penrose pseudoinverse. and add it to the the appondix above -->
 
 
 It is denoted as $X^+$ and has the following properties:
-
 
 This pseudoinverse is a neat bit of mathematics which allows us to not only invert the equation from the left but it somehow minimizes the sum of squared errors in the regression - I.e. we get the parameters while minimizing the sum of squared errors due to the variance term. One strong assumption we must make is that the design matrix $X$ is full rank, which means that the columns of the matrix are linearly independent. The columns of the design matrix correspond to the explanatory variables in the regression model.
 
