index and clean up transcripts

--- a/A14.qmd
+++ b/A14.qmd
@@ -15,7 +15,45 @@ keywords:
 
 The Moore-Penrose inversion and the Cholesky decomposition are two important methods in linear algebra for solving linear equations efficiently. They are widely used in various applications, including statistics, machine learning, and numerical analysis.
 
-## Moore-Penrose Inversion {#sec-moore-penrose}
+## Properties of transpose {#sec-linear-algebra-results}
+
+transpose of a row vector is a column vector and vice versa:
+
+
+$$
+kA^{T} = {kA}^T \qquad \text{scalar multiplication }
+$$ {#eq-scalar-multiplication}
+
+
+$$
+(A^{T})^T = A \qquad \text { involution }
+$$ {#eq-transpose-of-transpose}
+
+$$
+(A+B)^{T} = A^T + B^T \qquad\text {  distributivity under addition }
+$$ {#eq-distributivity-of-transpose}
+
+$$
+(AB)^T = B^T A^T \qquad\text {   anti }
+$$ {#eq-transpose-of-product}
+
+note that we swap the order of the matrices in the product when taking the transpose.
+
+if A is a square matrix, then the following are equivalent:
+$$
+Sq = A^t*A = A*A^t 
+$$
+where $Sq$ is a symmetric positive definite matrix.
+
+$$
+Sk = A^t*A = A*A^t
+$$
+
+## Full Rank {#sec-full-rank}
+
+A matrix is said to be of full row rank if its rows are linearly independent, and it is of full column rank if its columns are linearly independent. A matrix is said to be of full rank if it is either of full row rank or full column rank.
+
+## Generelised (Moore-Penrose) Inverse {#sec-moore-penrose}
 
 The Moore-Penrose inversion is a method for computing the pseudoinverse of a matrix. The pseudoinverse is a generalization of the inverse of a matrix that can be used to solve linear equations when the matrix is rectangular, not-invertible or even singular.
 
@@ -111,6 +149,27 @@ c. $A^+$ = $A$, if $A$ is idempotent.
 The Moore-Penrose inverse is particularly useful in maximum likelihood estimation (MLE) for linear models. In MLE, we often need to solve linear equations of the form $Ax = b$, where $A$ is the design matrix and $b$ is the response vector. If $A$ is not full rank or is not square, we can use the Moore-Penrose inverse to find a solution that minimizes the residual sum of squares.
 
 In the context of MLE, the Moore-Penrose inverse allows us to obtain parameter estimates even when the design matrix is singular or when there are more predictors than observations. This is achieved by projecting the response vector onto the column space of the design matrix, leading to a solution that is consistent and has desirable statistical properties.
+
+we start with:
+
+$$
+y = \mathbf{X} \boldsymbol{\beta} + \boldsymbol\epsilon \qquad \boldsymbol\epsilon \sim \mathcal{N} (0, v\mathbf{I})
+$$
+
+we want MLE of $\boldsymbol{\beta}$, which is given by:
+$$
+\hat{\boldsymbol{\beta}}_{NKE} = (\mathbf{X}^T \mathbf{X})^{-1} \mathbf{X}^T y
+$$
+
+Also in the baysian setting we can show that MLE is equivalent to minimizing the negative log-likelihood function, under a uniform prior on $\boldsymbol{\beta}$, which is equivalent to minimizing the residual sum of squares.
+
+we can show that if we use least squares AKA l_2 norm minimization, we will end up with the Moore-Penrose inverse to find the solution:
+
+we can write this explicitly as:
+
+$$
+\mathbb{E}_{l_2}(\boldsymbol{\beta}) = \frac{1}{2} \sum (y - \boldsymbol{\beta}^T \mathbf{X})^2
+$$
 
 ## Cholesky Decomposition {#sec-cholesky}
 
