--- a/C1-L04.qmd
+++ b/C1-L04.qmd
@@ -11,8 +11,10 @@ keywords:
   - Binomial Distribution
 ---
 
+\index{Maximum Likelihood Estimation}
 Before delving into Bayesian inference in the next module, in this module we will review inference in the frequentist approach.
 Much of the material was developed by R. A. Fischer in the last century. Some of the central ideas and tools of this approach include:
+
 
 - Maximum Likelihood estimates MLE, which are point estimates of statistics.
 - Confidence intervals CIs which formalize uncertainty in this paradigm.
@@ -32,7 +34,7 @@ In particular, the frequentist paradigm does not allow us to make probability st
 
 ![frequentist approach to confidence intervals](images/c1l04-ss-01-confidence-intervals.png){#fig-frequentist-ci .column-margin width="53mm"}
 
-
+\index{Confidence Interval}
 A brief review of the frequentist approach to inference will be useful for contrasting with the Bayesian approach. [@kruschke2011doing] Chapter 2 suggests that CI provides the basis for a Bayesian workflow and that the rest of the text fills in the missing pieces.
 
 ::: {.callout-important}
@@ -159,10 +161,11 @@ $$ {#eq-heart-attack-likelihood}
 Recall that we want to find the mortality rate parameter $\theta$ for our Sample $\vec Y$.
 
 Since it is a probability, it has a range of values from 0 to 1. One way to estimate it is that there should be one value that maximizes (@eq-heart-attack-likelihood). It makes the data the most likely to occur for the particular data we observed. This is referred to as the **maximum likelihood estimate** (MLE).
+\index{Maximum Likelihood Estimation}
 
 $$
 \mathop{\mathrm{MLE}}(\hat \theta) = \mathop{\mathrm{argmax}} \; \mathcal{L}(\theta\mid y)
-$$
+$$ {#eq-heart-attack-mle}
 
 Although we are trying to find the $\theta$ that maximizes the likelihood, in practice, it's usually easier to maximize the natural logarithm of the likelihood, commonly referred to as the log-likelihood.
 
