--- a/C1-L07-Ex1.qmd
+++ b/C1-L07-Ex1.qmd
@@ -8,6 +8,8 @@ keywords:
   - Homework
 ---
 
+\index{Maximum Likelihood Estimation}
+
 ::::: {.content-visible unless-profile="HC"}
 
 ::: {.callout-caution}
@@ -59,7 +61,7 @@ plot(theta, dbeta(theta, 1, 5), type = 'l')
 :::
 
 ::: {#exr-priors-3}
-What is the maximum likelihood estimate (MLE) of θ if we observe the sequence (T, T, T, T)?
+What is the maximum likelihood estimate (MLE) of $\theta$ if we observe the sequence $(T, T, T, T)$ ?
 :::
 
 ::: {.solution .callout-tip collapse="true"}
@@ -74,7 +76,7 @@ The main issue here seems to be if we need to consider the prior in the sample s
 :::
 
 ::: {#exr-priors-4}
-What is the posterior mean estimate of $\theta$ if we observe the sequence (T, T, T, T)?
+What is the posterior mean estimate of $\theta$ if we observe the sequence $(T, T, T, T)$?
 :::
 
 ::: {.solution .callout-tip collapse="true"}
