--- a/C1-L11.qmd
+++ b/C1-L11.qmd
@@ -13,7 +13,7 @@ keywords:
 ![Non-Informative Priors](images/c1l11-ss-01-non-informative-priors.png){#fig-non-informative-priors .column-margin width="53mm"}
 
 
-
+\index{prior!non-informative}
 We've seen examples of choosing priors that contain a significant amount of information. We've also seen some examples of choosing priors where we're attempting to not put too much information in to keep them vague.
 
 Another approach is referred to as objective Bayesian statistics or inference where we explicitly try to minimize the amount of information that goes into the prior.
@@ -36,12 +36,14 @@ The effective sample size of a beta prior is the sum of its two parameters. So i
 
 So this is not a completely non-informative prior.
 
-We could think about a prior that has less information. For example $Beta(\frac{1}{2}, \frac{1}{2})$, this would have half as much information with an effective sample size of one.
+We could think about a prior that has less information. For example $\mathrm{Beta}(\tfrac{1}{2}, \tfrac{1}{2})$, this would have half as much information with an effective sample size of one.
 
-We can take this even further. Think about something like $Beta(0.001, 0.001)$ This would have much less information, with the effective sample size fairly close to zero. In this case, the data would determine the posterior and there would be very little influence from the prior.
+We can take this even further. Think about something like $\mathrm{Beta}(0.001, 0.001)$ This would have much less information, with the effective sample size fairly close to zero. In this case, the data would determine the posterior and there would be very little influence from the prior.
 
 ### Improper priors {#sec-improper-priors}
 
+\index{prior!improper}
+\index{Improper prior}
 Can we go even further? We can think of the limiting case. Let's think of $Beta(0,0)$, what would that look like?
 
 $$
@@ -59,6 +61,7 @@ f(\theta\mid y) \propto \theta^{y-1}(1-\theta)^{n-y-1} \sim Beta(y, n-y)
 $$
 
 With a posterior mean of $\frac{y}{n} =\hat{\theta}$, which you should recognize as the maximum likelihood estimate. So by using this improper prior, we get a posterior which gives us point estimates exactly the same as the frequentist approach.
+\index{Maximum Likelihood Estimation}
 
 But in this case, we can also think of having a full posterior. From this, we can make interval statements, and probability statements, and we can actually find an interval and say that there's $95\%$ probability that $\theta$ is in this interval. This is not something you can do under the frequentist approach even though we may get the same exact interval.
 
@@ -78,21 +81,22 @@ Another example is thinking about the normal case.
 
 $$
 Y_i \stackrel{iid}\sim \mathcal{N}(\mu, \sigma^2)
-$$
+$$ {#eq-normal-case}
 
 Let's start off by assuming that $\sigma^2$ is known and we'll just focus on the mean $\mu$.
 
-We can think about a vague prior like before and say that
+\index{prior!vague}
+We can think about a vague prior like before and say that:
 
 $$
 \mu \sim N(0, 1000000^2)
-$$
+$$ {#eq-vague-prior-normal}
 
 This would just spread things out across the real line. That would be a fairly non-informative prior covering a lot of possibilities. We can then think about taking the limit, what happens if we let the variance go to $\infty$. In that case, we're spreading out this distribution across the entire real number line. We can say that the density is just a constant across the whole real line.
 
 $$
 f(\mu) \propto 1
-$$
+$$ 
 
 This is an improper prior because if you integrate the real line you get an infinite answer. However, if we go ahead and find the posterior
 
