--- a/C3-L03.qmd
+++ b/C3-L03.qmd
@@ -24,18 +24,17 @@ keywords:
 
 # The EM algorithm for Mixture Models 🎥{#sec-em-algorithm-for-mixture-models}
 
-\index{mixture!EM algorithm}
-Maximum likelihood estimation is the most common approach to estimate the parameters of statistical models. However, attempting to obtain maximum likelihood estimates (MLEs) $\hat{\omega}$ and $\hat{\theta}$ by directly maximizing the observed-data likelihood
+\index{mixture!EM algorithm} \index{Maximum Likelihood Estimation}
+Maximum likelihood estimation is the most common approach to estimate the parameters of statistical models. However, attempting to obtain maximum likelihood estimates (MLEs) $\hat{\omega}$ and $\hat{\theta}$ by directly maximizing the observed-data likelihood:
 
 $$
 \mathcal{L}(\omega,\theta) = \arg \max_{\omega,\theta} 
 \prod_{i=1}^{n} \sum_{k=1}^{K} \omega_k g_k(x_i|\theta_k)
-$$
+$$ {#eq-mle-mixture-likelihood}
 
-is not feasible, as it is a non-convex optimization problem. 
+isn't feasible, as it is a non-convex optimization problem. 
 
-\index{optimization}
-\index{Newton-Raphson algorithm}
+\index{optimization} \index{Newton-Raphson algorithm}
 Using numerical optimization methods, such as the Newton-Raphson algorithm, can be challenging due when there are many components in the mixture.
 
 It worthwhile mentioning that MLE is more of a **frequentist approach**, as it provides point estimates of the parameters rather than a distributional view. In contrast, Bayesian methods we will consider later provide a full posterior distribution of the parameters, which is more informative and allows for uncertainty quantification.
