--- a/_C4-L01-T07.qmd
+++ b/_C4-L01-T07.qmd
@@ -1,7 +1,8 @@
 <!-- transcript of https://www.coursera.org/learn/bayesian-statistics-time-series-analysis/lecture/lmIXO/maximum-likelihood-estimation-in-the-ar-1 -->
 
-I will now talk about
-how to perform maximum likelihood estimation in the case of the autoregressive model of order one. 
+
+
+I will now talk about how to perform maximum likelihood estimation in the case of the autoregressive model of order one. 
 Recall that we have the equation for
 the process. This is a zero mean AR1, looks like this. 
 And then the epsilon t's are iid normal (0,v). 
