--- a/C3-L03.qmd
+++ b/C3-L03.qmd
@@ -120,7 +120,7 @@ This video covers the code sample given in @lst-em-example-1 below. It is a simp
   - would be interesting to make the number of components be drawn from a distribution rather than fixed at 2, then run the EM algorithm for multiple draws and pick the one with the best fit.
   - Later on we learn about using BIC to select the number of components in a mixture model, which is a more principled approach than simply fixing the number of components at 2. However it stills seems that the number of components might be a RV even if it's prior would be centred at the BIC estimate.
 
-## Sample code for EM example 1 {#sec-em-code-example-1}
+## Sample code for EM example 1 📖 ℛ {#sec-em-code-example-1}
 
 ```{r}
 #| label: lst-em-example-1
@@ -256,12 +256,7 @@ legend(6,0.22,c("Truth","Estimate"),col=c("black","red"), lty=c(1,2), bty="n")
 ```
 
 
-## EM example 2
-
-
-## Sample code for EM example 2
-
-
+## Sample code for multivariate normal EM 📖 ℛ {#sec-multivariate-EM}
 
 This variant differs from the code sample above in that it uses the `mvtnorm` package to generate **multivariate normal distributions**. It also uses the `ellipse` package to plot the ellipses around the means of the components.
 
