--- a/C4-L05.qmd
+++ b/C4-L05.qmd
@@ -31,7 +31,9 @@ keywords:
 
 {{< lipsum 2 >}}
 
-## Rcode: Maximum likelihood estimation, AR(p), conditional likelihood 📖
+## R code: Maximum likelihood estimation, AR(p), conditional likelihood 📖
+
+\index{Maximum Likelihood Estimation}
 
 ```{r}
 #| label: ar-likelihood
