--- a/C3-L03.qmd
+++ b/C3-L03.qmd
@@ -1,11 +1,12 @@
 ---
-title : 'M2L3 - The EM algorithm for Mixture models'
+title : 'The EM algorithm for Mixture models - M2L3'
 subtitle : 'Bayesian Statistics: Mixture Models'
 categories:
   - Bayesian Statistics
 keywords:
   - Mixture Models
   - Maximum Likelihood Estimation
+  - Expectation-Maximization
   - full data log likelihood
   - EM algorithm
   - E step
@@ -22,10 +23,10 @@ keywords:
 
 :::
 
-# The EM algorithm for Mixture Models 🎥{#sec-em-algorithm-for-mixture-models}
 
-\index{mixture!EM algorithm} \index{Maximum Likelihood Estimation}
-Maximum likelihood estimation is the most common approach to estimate the parameters of statistical models. However, attempting to obtain maximum likelihood estimates (MLEs) $\hat{\omega}$ and $\hat{\theta}$ by directly maximizing the observed-data likelihood:
+\index{mixture!EM algorithm} 
+\index{Maximum Likelihood Estimation}
+**Maximum likelihood estimation** is the frequentist approach to estimate the parameters of statistical models. However, attempting to obtain maximum likelihood estimates (MLEs) $\hat{\omega}$ and $\hat{\theta}$ by directly maximizing the observed-data likelihood:
 
 $$
 \mathcal{L}(\omega,\theta) = \arg \max_{\omega,\theta} 
@@ -39,7 +40,7 @@ Using numerical optimization methods, such as the Newton-Raphson algorithm, can 
 
 It worthwhile mentioning that MLE is more of a **frequentist approach**, as it provides point estimates of the parameters rather than a distributional view. In contrast, Bayesian methods we will consider later provide a full posterior distribution of the parameters, which is more informative and allows for uncertainty quantification.
 
-## EM algorithms for Mixture Models 
+## EM algorithms for general mixtures 🎥 {#sec-EM-algorithm-for-general-mixtures}
 
 ![EM - Challenge](images/c3l2-ss-01-em-for-general-mixtures.png){#fig-s_01 .column-margin width="53mm" group="slides"}
 
@@ -52,14 +53,16 @@ It worthwhile mentioning that MLE is more of a **frequentist approach**, as it p
 ![EM - Deep Dive](images/c3l2-ss-03-em-for-general-mixtures.png){#fig-s_03 .column-margin width="53mm" group="slides"}
 
 
-
-EM algorithm comes up a lot in NLP and other fields so it is worthwhile to understand it the way we will do so in the course.
+\index{EM algorithm} \index{Expectation-Maximization algorithm}
+The **EM algorithm** comes up a lot in NLP and other fields so it is worthwhile to understand it the way we will do so in the course.
 
 It also important that the EM algorithm we use for mixture models is from the 1970s and is not the same as the general EM algorithm. c.f. [@dempster1977maximum]
 
 The EM algorithm is iterative and consists of two steps: the E-step and the M-step. The E-step computes the expected value of the complete-data log-likelihood given the observed data and the current parameter estimates, while the M-step maximizes this expected log-likelihood with respect to the parameters. However before we start these steps we need to set initial values for the parameters.
 
-E step: Set
+### E step: 
+
+Set
 
 $$
 Q(\omega,\theta \mid \omega^{(t)}, \theta^{(t)},x) = E_{c \mid \omega^{(t)},\theta^{(t)}, x} \left[ \log \mathbb{P}r(x,c \mid \omega,\theta) \right]
@@ -69,7 +72,9 @@ $$ {#eq-q-function}
 Where $c$ is the latent variable indicating the component from which each observation was generated, $\omega$ are the weights, and $\theta$ are the parameters of the Gaussian components (means and standard deviations).
 
 
-M step: Set
+### M step: 
+
+Set
 
 $$
 \hat{\omega}^{(t+1)},\hat{\theta}^{(t+1)} = \arg \max_{\omega,\theta} Q(\omega,\theta \mid \hat{\omega}^{(t)}, \hat{\theta}^{(t)},y)
@@ -87,11 +92,7 @@ $$
 
 where the value of $v_{ik}$ is interpreted as the probability that the $i$-th observation comes from the $k$-th component of the mixture assuming the population parameters $\omega$ and $\theta$.
 
-
-## EM for general Mixture 
-
-
-## EM for location Mixture of Gaussians
+## EM for location Mixture of Gaussians 🎥  {#sec-em-for-location-mixtures-of-gaussians}
 
 ![the responsibility](images/c3l2-ss-04-em-for-location-mixtures-of-gaussians.png){#fig-s_04 .column-margin width="53mm" group="slides"}
 
@@ -109,7 +110,7 @@ where the value of $v_{ik}$ is interpreted as the probability that the $i$-th ob
 
 
 
-## EM example 1 {#sec-em-example-1}
+## EM example 1 🎥 {#sec-em-example-1}
 
 This video covers the code sample given in @lst-em-example-1 below. It is a simple implementation of the EM algorithm for fitting a 2-component Gaussian location mixture model to simulated data.
 
@@ -255,6 +256,10 @@ points(x, rep(0,n), col=cc)
 legend(6,0.22,c("Truth","Estimate"),col=c("black","red"), lty=c(1,2), bty="n")
 ```
 
+## EM example 2 🎥 {#sec-em-example-2}
+
+This video covers the code sample given in @sec-sec-multivariate-EM below. It is a more advanced implementation of the EM algorithm for fitting a mixture of multivariate Gaussian components to simulated data.
+
 
 ## Sample code for multivariate normal EM 📖 ℛ {#sec-multivariate-EM}
 
@@ -398,7 +403,7 @@ for(k in 1:KK){
 ```
 
 
-## Mixture of Log Gaussians {#sec-mixture-of-log-gaussians}
+## Mixture of Log Gaussians  {#sec-mixture-of-log-gaussians}
 
 ::: {.callout-note collapse="true"}
 ## Prompt {.unnumbered .unlisted}
