--- a/C3-L03.qmd
+++ b/C3-L03.qmd
@@ -58,6 +58,20 @@ The **EM algorithm** comes up a lot in NLP and other fields so it is worthwhile 
 
 It also important that the EM algorithm we use for mixture models is from the 1970s and is not the same as the general EM algorithm. c.f. [@dempster1977maximum]
 
+The goal of the EM algorithm is to find the parameters $\omega$ and $\theta$  for which the observed-data likelihood is maximized. We start with the **complete-data log-likelihood** Q function and then use it to construct maximum likelihood estimators for the parameters we are interested in, these are primarily the weights $\omega$ and the parameters $\theta$ of the distributional components.
+
+we can express the complete-data log-likelihood as:
+
+$$
+L(\boldsymbol \theta,\boldsymbol \omega) = \prod_{i=1}^{N} \sum_{k=1}^{K} \omega_k g_k(x_i \mid \theta_k)
+$$ {#eq-em-complete-data-log-likelihood}
+
+MLE's $\hat{\theta}$ and $\hat{\omega}$ are defined 
+
+$$
+(\boldsymbol \theta,\boldsymbol \omega) \stackrel{.}{=} \arg \max_{\boldsymbol \theta,\boldsymbol \omega} L(\boldsymbol \theta,\boldsymbol \omega)
+$$
+
 The EM algorithm is iterative and consists of two steps: the E-step and the M-step. The E-step computes the expected value of the complete-data log-likelihood given the observed data and the current parameter estimates, while the M-step maximizes this expected log-likelihood with respect to the parameters. However before we start these steps we need to set initial values for the parameters.
 
 ### E step: 
@@ -66,7 +80,7 @@ Set
 
 $$
 Q(\omega,\theta \mid \omega^{(t)}, \theta^{(t)},x) = E_{c \mid \omega^{(t)},\theta^{(t)}, x} \left[ \log \mathbb{P}r(x,c \mid \omega,\theta) \right]
-$$ {#eq-q-function}
+$$ {#eq-em-q-function}
 
 
 Where $c$ is the latent variable indicating the component from which each observation was generated, $\omega$ are the weights, and $\theta$ are the parameters of the Gaussian components (means and standard deviations).
@@ -78,7 +92,7 @@ Set
 
 $$
 \hat{\omega}^{(t+1)},\hat{\theta}^{(t+1)} = \arg \max_{\omega,\theta} Q(\omega,\theta \mid \hat{\omega}^{(t)}, \hat{\theta}^{(t)},y)
-$$ {#eq-mstep}
+$$ {#eq-em-m-step}
 
 where $\hat{\omega}^{(t)}$ and $\hat{\theta}^{(t)}$ are the current estimates of the parameters, and $y$ is the observed data.
 
