--- a/C3-L03.qmd
+++ b/C3-L03.qmd
@@ -272,7 +272,7 @@ legend(6,0.22,c("Truth","Estimate"),col=c("black","red"), lty=c(1,2), bty="n")
 
 ## EM example 2 🎥 {#sec-em-example-2}
 
-This video covers the code sample given in @sec-sec-multivariate-EM below. It is a more advanced implementation of the EM algorithm for fitting a mixture of multivariate Gaussian components to simulated data.
+This video covers the code sample given in @sec-multivariate-EM below. It is a more advanced implementation of the EM algorithm for fitting a mixture of multivariate Gaussian components to simulated data.
 
 
 ## Sample code for multivariate normal EM 📖 ℛ {#sec-multivariate-EM}
