--- a/C3-L06.qmd
+++ b/C3-L06.qmd
@@ -12,19 +12,29 @@ keywords:
   - notes
 ---
 
-## Clustering
+## Mixture Models for Clustering 🎥 {#sec-mixture-clustering}
 
 \index{clustering}
 
-### Mixture Models for Clustering
+![Clustering Mixture Models](images/c3l04-ss-01-clustering.png){.column-margin width="53mm" group="slides"}
 
 
-### Clustering example
+![Clustering Mixture Models](images/c3l04-ss-02-clustering.png){.column-margin width="53mm" group="slides"}
+
+![Clustering Mixture Models](images/c3l04-ss-03-clustering.png){.column-margin width="53mm"}
+
+![Clustering Mixture Models](images/c3l04-ss-04-clustering.png){.column-margin width="53mm"}
+
+
+## Clustering example {#sec-clustering-example}
 
 \index{dataset!iris}
 
 
 ```{r}
+#| label: fig-clustering-iris
+#| fig-cap: "Clustering the iris dataset using k-means clustering and a location and scale mixture model with K normals."
+
 ## Using mixture models for clustering in the iris dataset
 ## Compare k-means clustering and a location and scale mixture model with K normals
 
