--- a/C3-L06.qmd
+++ b/C3-L06.qmd
@@ -16,14 +16,59 @@ keywords:
 
 \index{clustering}
 
-![Clustering Mixture Models](images/c3l04-ss-01-clustering.png){.column-margin width="53mm" group="slides"}
+![Clustering Mixture Models 1](images/c3l04-ss-01-clustering.png){#fig-sl-01-clustering .column-margin width="53mm" group="slides"}
 
 
-![Clustering Mixture Models](images/c3l04-ss-02-clustering.png){.column-margin width="53mm" group="slides"}
+![Clustering Mixture Models 2](images/c3l04-ss-02-clustering.png){#fig-sl-02-clustering .column-margin width="53mm" group="slides"}
 
-![Clustering Mixture Models](images/c3l04-ss-03-clustering.png){.column-margin width="53mm"}
+![Clustering Mixture Models 3](images/c3l04-ss-03-clustering.png){#fig-sl-03-clustering .column-margin width="53mm"}
 
-![Clustering Mixture Models](images/c3l04-ss-04-clustering.png){.column-margin width="53mm"}
+
+![Clustering Mixture Models 4](images/c3l04-ss-04-clustering.png){#fig-sl-04-clustering .column-margin width="53mm"}
+
+\index{mixtures!clustering}
+
+Clustering, or unsupervised classification, aims to partition heterogeneous data into homogeneous groups (clusters). Common in biology and other domains, clustering helps identify underlying structure, such as species based on physiological features.
+
+A widely-used method is **K-means clustering**, which:
+
+* Fixes the number of clusters $K$
+* Alternates between:
+
+  1. **Assignment step**: Assigns each data point to its nearest cluster center.
+  2. **Update step**: Recomputes centers as means of assigned points.
+
+This process iterates until assignments stabilize.
+
+K-means is closely related to a **mixture of Gaussians** with:
+
+* Equal component weights $\omega_k = 1/K$
+* Shared spherical covariance $\Sigma_k = \sigma^2 I$
+* Fitted via the **EM algorithm**, where:
+
+  * E-step: compute soft assignment probabilities $V_{ik}$
+  * M-step: update cluster means using weighted averages
+
+If components are well-separated, EM approximates hard assignments similar to K-means.
+
+### Limitations of K-means:
+
+* Assumes **equal-sized spherical clusters**
+* Fails with:
+
+  * **Correlated features**
+  * **Different variances per dimension**
+  * **Unequal cluster sizes**
+
+### Advantages of Mixture Models:
+
+* Allow flexible covariances $\Sigma_k$
+* Estimate weights $\omega_k$
+* Can use alternative kernels (e.g., t-distributions)
+* Enable **Bayesian clustering** via MCMC
+
+Thus, viewing K-means as a special case of Gaussian mixture models clarifies its assumptions and guides principled extensions.
+
 
 
 ## Clustering example {#sec-clustering-example}
